got it working. I was helped out by people from stackoverflow. They told me that on the svg file there was a style attribute that had a property fill-oppacity: 0 which would overide everything and make it unchangeable. I fixed it by removing the attribute from the svg tag. Then I added in an transition-duration: 4s; which on the :hover property to make it slowly show up. Now I need to work on fixing the size of the circles and get the navbar properly configured

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -7,7 +7,12 @@
     top: 0;
 }
 
+.dotSvg{
+  fill:#0000
+}
+
 .dotSvg:hover{
+  transition-duration: .4s;
   cursor: pointer;
   fill: #5AE2EB !important;
 
